<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/bienvenida_principal"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TxtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/email"
            android:inputType="textEmailSubject"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/TxtPassword"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background_primary"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/botonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background_gray"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/registrar"
            android:textAllCaps="false"
            android:textColor="#4d4d4d"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>